--- a/conf/.conf
+++ b/conf/.conf
@@ -1,6 +1,6 @@
 {
-  "include_files": [".js", ".css", ".html",".txt", ".md", ".svg"],
-  "exclude_files": ["Kwa","jquery","bootstrap","babylon",".git","package"],
-  "exclude_folders": ["node_modules", ".git"],
-  "include_folders": ["css", "js", "exports", "html", "bin"]
+  "include_files": [".js", ".css", ".html",".txt", ".md", ".svg",".java"],
+  "exclude_files": ["Kwa","jquery","bootstrap","babylon",".git","package",".exe",".zip",".jpg",".png",".gif",".bmp",".conf"],
+  "exclude_folders": ["node_modules", ".git",".atom",".project","conf"],
+  "include_folders": []
 }
