--- a/conf/fndr.conf
+++ b/conf/fndr.conf
@@ -1,4 +1,4 @@
 {
-  "include_files": [".js", ".css", ".html",".txt", ".md", ".xml",".conf",".settings",".sah",".json"],
+  "include_files": [".js", ".css", ".htm",".txt", ".md", ".xml",".conf",".settings",".sah",".json",".sh","cfg"],
   "exclude_files": []
 }
