add reals tests  on clcnter

--- a/conf/.conf
+++ b/conf/.conf
@@ -1,6 +1,6 @@
 {
   "include_files": [".js", ".css", ".html",".txt", ".md", ".svg",".java"],
   "exclude_files": ["Kwa","jquery","bootstrap","babylon",".git","package",".exe",".zip",".jpg",".png",".gif",".bmp",".conf"],
-  "exclude_folders": ["node_modules", ".git",".atom",".project","conf"],
+  "exclude_folders": ["node_modules", ".git",".atom",".project","conf",".nyc_output","test"],
   "include_folders": []
 }
